[NAE-2072] Workspaces - add workspaceId in Event and initialize it - rework constructors in Event's hierarchy